--- a/templates/cupcakes.html
+++ b/templates/cupcakes.html
@@ -18,6 +18,7 @@
         <li><a href="{{url_for('home')}}">Home</a></li>
         <li><a href="{{url_for('all_cupcakes')}}">All Cupcakes</a></li>
         <li><a href="{{url_for('order')}}">Order</a></li>
+        <li><a href="{{url_for('shopping_cart')}}">Shopping Cart</a></li>
       </ul>
     </nav>
     <main class="container">
