--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Order Confirmation</title>
-  </head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Order Confirmation</title>
+        <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
+    </head>
   <body>
     <h1>Order Confirmation</h1>
     <p>Your order has been successfully added!</p>
     <a href="/">Return to Home</a>
   </body>
+  <footer>
+    <p>&copy; 2023 Walt's Cupcake Corner. All rights reserved.</p>
+</footer>
 </html>
