--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <p>Check out our amazing cupcakes and place your order.</p>
     </main>
     <footer>
-        <p>&copy; 2023 Cupcake Store. All rights reserved.</p>
+        <p>&copy; 2023 Walt's Cupcake Corner. All rights reserved.</p>
     </footer>
 </body>
 </html>
