--- a/templates/individual-cupcake.html
+++ b/templates/individual-cupcake.html
@@ -29,7 +29,7 @@
         <a href="{{url_for('all_cupcakes')}}">Back to All Cupcakes</a>
     </main>
     <footer>
-        <p>&copy; 2023 Cupcake Store. All rights reserved.</p>
+        <p>&copy; 2023 Walt's Cupcake Corner. All rights reserved.</p>
     </footer>
 </body>
 </html>
