--- a/templates/order.html
+++ b/templates/order.html
@@ -33,7 +33,7 @@
         </form>
     </main>
     <footer>
-        <p>&copy; 2023 Cupcake Store. All rights reserved.</p>
+        <p>&copy; 2023 Walt's Cupcake Corner. All rights reserved.</p>
     </footer>
 </body>
 </html>
