--- a/templates/shopping_cart.html
+++ b/templates/shopping_cart.html
@@ -37,7 +37,7 @@
         <p>Total Price: {{ order_total }}</p>
     </main>
     <footer>
-        <p>&copy; 2023 Cupcake Store. All rights reserved.</p>
+        <p>&copy; 2023 Walt's Cupcake Corner. All rights reserved.</p>
     </footer>
 </body>
 </html>
