changed some naming conventions in my html

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Cupcake Store</h1>
+        <h1>Walt's Cupcake Corner</h1>
     </header>
     <nav>
         <ul>
@@ -20,7 +20,7 @@
     </nav>
     <main class="container">
         <div class="welcome-message">
-            <h2>Welcome to the Cupcake Store!</h2>
+            <h2>Welcome to the Walt's Cupcake Corner!</h2>
             <p>Check out our amazing cupcakes and place your order.</p>
         </div>
     </main>
