--- a/templates/individual-cupcake.html
+++ b/templates/individual-cupcake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Cupcake Store</h1>
+        <h1>Walt's Cupcake Corner</h1>
     </header>
     <nav>
         <ul>
