--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <main class="container">
         <div class="welcome-message">
             <h2>Welcome to the Walt's Cupcake Corner!</h2>
-            <p>Check out our amazing cupcakes and place your order.</p>
+            <img class="center-image" src="{{url_for('static', filename='images/cupcakes.png')}}" alt="Cupcakes" />
         </div>
     </main>
     <footer>
