fixed typo in index.html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main class="container">
         <div class="welcome-message">
-            <h2>Welcome to the Walt's Cupcake Corner!</h2>
+            <h2>Welcome to Walt's Cupcake Corner!</h2>
             <img class="center-image" src="{{url_for('static', filename='images/cupcakes.png')}}" alt="Cupcakes" />
         </div>
     </main>
